@@ -6,25 +6,24 @@ import org.navistack.admin.modules.identity.dao.UserRoleDao;
 import org.navistack.admin.modules.identity.entity.User;
 import org.navistack.admin.modules.identity.entity.UserRole;
 import org.navistack.admin.modules.identity.query.UserQuery;
-import org.navistack.admin.modules.identity.query.UserRoleQuery;
 import org.navistack.admin.modules.identity.service.UserService;
 import org.navistack.admin.modules.identity.service.convert.UserConverter;
+import org.navistack.admin.modules.identity.service.convert.UserDetailVmConverter;
 import org.navistack.admin.modules.identity.service.convert.UserDtoConverter;
 import org.navistack.admin.modules.identity.service.dto.UserDto;
 import org.navistack.admin.modules.identity.service.vm.UserDetailVm;
-import org.navistack.admin.support.mybatis.AuditingEntitySupport;
+import org.navistack.admin.support.mybatis.AuditingPropertiesSupport;
 import org.navistack.framework.core.error.DomainValidationException;
 import org.navistack.framework.core.error.NoSuchEntityException;
 import org.navistack.framework.data.Page;
-import org.navistack.framework.data.PageImpl;
+import org.navistack.framework.data.PageBuilder;
 import org.navistack.framework.data.Pageable;
 import org.navistack.framework.utils.Asserts;
-import org.navistack.framework.utils.ModelMappers;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.util.Collection;
 import java.util.List;
+import java.util.Optional;
 import java.util.stream.Collectors;
 
 @Service
@@ -42,26 +41,22 @@ public class UserServiceImpl implements UserService {
     @Override
     public Page<UserDto> paginate(UserQuery query, Pageable pageable) {
         long totalRecords = dao.countByQuery(query);
-        List<User> entities = dao.paginateByQuery(query, pageable);
-        Collection<UserDto> dtos = UserConverter.INSTANCE.toDtos(entities);
-        return new PageImpl<>(dtos, pageable, totalRecords);
+        if (totalRecords <= 0) {
+            return PageBuilder.emptyPage();
+        }
+        return dao.paginateByQuery(query, pageable)
+                .stream()
+                .map(UserConverter.INSTANCE::toDto)
+                .collect(PageBuilder.collector(pageable, totalRecords));
     }
 
     @Override
     public UserDetailVm queryDetailById(Long id) {
-        User user = dao.selectById(id);
-
-        UserDetailVm vm = ModelMappers.map(user, UserDetailVm.class);
-
-        UserRoleQuery urq = new UserRoleQuery();
-        urq.setUserId(id);
-        List<Long> roleIds = userRoleDao.selectAllByQuery(urq)
-                .stream()
-                .map(UserRole::getRoleId)
-                .collect(Collectors.toList());
-
+        User user = Optional.ofNullable(dao.selectById(id))
+                .orElseThrow(() -> new NoSuchEntityException("User does not exist"));
+        UserDetailVm vm = UserDetailVmConverter.INSTANCE.fromEntity(user);
+        List<Long> roleIds = userRoleDao.selectAllRoleIdsByUserId(id);
         vm.setRoleIds(roleIds);
-
         return vm;
     }
 
@@ -73,7 +68,7 @@ public class UserServiceImpl implements UserService {
         Asserts.state(dto.getEmailAddress(), dto.getId(), this::validateAvailabilityOfEmailAddress, () -> new DomainValidationException("Email address has been taken already"));
 
         User entity = UserDtoConverter.INSTANCE.toEntity(dto);
-        AuditingEntitySupport.insertAuditingProperties(entity);
+        AuditingPropertiesSupport.created(entity);
         dao.insert(entity);
         replaceRolesOf(entity.getId(), dto.getRoleIds());
     }
@@ -88,7 +83,7 @@ public class UserServiceImpl implements UserService {
 
 
         User entity = UserDtoConverter.INSTANCE.toEntity(dto);
-        AuditingEntitySupport.updateAuditingProperties(entity);
+        AuditingPropertiesSupport.updated(entity);
         dao.updateById(entity);
         replaceRolesOf(entity.getId(), dto.getRoleIds());
     }
@@ -111,7 +106,7 @@ public class UserServiceImpl implements UserService {
         roleIds = roleDao.selectAllIdsByIds(roleIds);
         List<UserRole> userRoles = roleIds.stream()
                 .map(roleId -> UserRole.of(userId, roleId))
-                .toList();
+                .collect(Collectors.toList());
         userRoleDao.insertAll(userRoles);
     }
 
